fix issue with scrollbars on body on windows

--- a/src/ui/src/template/layout.css
+++ b/src/ui/src/template/layout.css
@@ -9,6 +9,7 @@ body
 	background-color: #fff;
 	margin: 0;
 	padding: 0;
+	overflow: hidden;
 }
 
 hr
